Improved drawer UI, resolved CSS conflicts, and aligned product page data.

--- a/src/components/landingcomponent/Navbar/MegaMenu.css
+++ b/src/components/landingcomponent/Navbar/MegaMenu.css
@@ -60,7 +60,7 @@ a, a:hover, a.active, a:active, a:visited, a:focus {
 .mega-menu {
   display: none;
   position: absolute;
-  /*top: 100%;*/
+  top: 100%;
   left: 0;
   /*right: 10%;*/
   background-color: #fff;
@@ -150,7 +150,7 @@ a, a:hover, a.active, a:active, a:visited, a:focus {
     display: block;
   }
 }
-@media (max-width: 1199px){
+@media (max-width: 768px){
   .exo-menu {
     display: none;
   }
